scss/layout.scss
body {
  height: 100%;

  // Up to some extend #main is the actual "body" of the page
  #main {
    // Usage of variables yield error on SCSS compiler
    background: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
    min-height: 100%;
  }
}

// Container we use is neither fluid or typical container from bootstrap. Instead, is a fluid with a max-width
%custom-container {
  @include make-container;
  max-width: map-get($map: $container-max-widths, $key: "xl");
}

.wrap {
  @extend %custom-container;
}

// Make sure when rendering categories-and-latest we remove margin since "latest" has been removed
.categories-and-latest.categories-and-latest .column.categories {
  margin: 0;
}

